--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -39,6 +39,7 @@
       "last 1 safari version"
     ]
   }
+  "homepage": "https://sharanpatil106.github.io/To-D0-Application",
 }
-"homepage": "https://sharanpatil106.github.io/To-D0-Application",
+
 
